--- a/packages/terra-form-radio/package.json
+++ b/packages/terra-form-radio/package.json
@@ -41,6 +41,7 @@
     "precompile": "rm -rf lib",
     "test": "npm run test:jest && npm run test:wdio",
     "test:jest": "jest --config ../../jestconfig.js",
-    "test:wdio": "../../node_modules/.bin/wdio ../../node_modules/terra-dev-site/config/wdio/wdio.conf.js"
+    "test:wdio": "../../node_modules/.bin/wdio ../../node_modules/terra-dev-site/config/wdio/wdio.conf.js",
+    "test:wdio-fusion-theme": "../../node_modules/.bin/wdio ../../wdio.conf.orion.fusion.js"
   }
 }
