--- a/packages/terra-form-radio/package.json
+++ b/packages/terra-form-radio/package.json
@@ -41,7 +41,7 @@
     "precompile": "rm -rf lib",
     "test": "npm run jest && npm run wdio",
     "jest": "jest --config ../../jestconfig.js",
-    "wdio": "cd ../.. && npx wdio ./packages/$npm_package_name/wdio.conf.js"
-    "wdio-fusion-theme": " cd ../.. && npx wdio ./$npm_package_name/wdio.conf.orion.fusion.theme.js"
+    "wdio": "cd ../.. && npx wdio ./packages/$npm_package_name/wdio.conf.js",
+    "wdio-fusion-theme": "cd ../.. && npx wdio ./packages/$npm_package_name/wdio.conf.fusion.theme.js"
   }
 }
