--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "start-prod": "tt-serve --env.disableHotReloading -p",
     "start-static": "tt-serve-static --site ./build",
     "test": "npm run jest && npm run wdio",
-    "wdio": "cross-env NODE_OPTIONS=--max-old-space-size=2048 wdio node_modules/terra-toolkit/config/wdio/wdio.conf.js"
+    "wdio": "cross-env NODE_OPTIONS=--max-old-space-size=2048 wdio node_modules/terra-toolkit/config/wdio/wdio.conf.js",
     "wdio-fusion-theme": "cross-env NODE_OPTIONS=--max-old-space-size=2048 wdio wdio.conf.fusion.theme.js"
   },
   "devDependencies": {
