--- a/packages/terra-form-radio/package.json
+++ b/packages/terra-form-radio/package.json
@@ -43,6 +43,6 @@
     "test": "npm run jest && npm run wdio",
     "jest": "jest --config ../../jestconfig.js",
     "wdio": "NODE_ENV=production cd ../.. && npx wdio ./packages/$npm_package_name/wdio.conf.js",
-    "wdio-fusion": "THEME=fusion LOCALE=en cd ../.. && npx wdio ./packages/$npm_package_name/wdio.conf.js"
+    "wdio-fusion": "cd ../.. && THEME=fusion npx wdio ./packages/$npm_package_name/wdio.conf.js"
   }
 }
