Revert "remove lint stage for now"
This reverts commit 2f8b76b3f6b40e0d1505f73978f582b58c95a9b3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,7 @@ jobs:
         - 'rm -f $HOME/docker/*.tar.gz'
 stages:
   - build
+  - danger lint and jest
   - wdio
   - name: deploy
     if: type != pull_request
