--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
     - stage: danger lint and jest
       script:
         - travis_wait docker-compose run -e DANGER_GITHUB_API_TOKEN=$DANGER_GITHUB_API_TOKEN -e HAS_JOSH_K_SEAL_OF_APPROVAL=$HAS_JOSH_K_SEAL_OF_APPROVAL -e TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST -e TRAVIS_REPO_SLUG=$TRAVIS_REPO_SLUG test-ci bash -c 'npm run danger && npm run jest'
-    - stage: wdio - default theme
+    - stage: wdio
       script:
         - travis_wait docker-compose run test-ci npm run wdio -- --suite suite1
     -
@@ -47,7 +47,6 @@ jobs:
     -
       script:
         - travis_wait docker-compose run test-ci npm run wdio -- --suite suite4
-    - stage: wdio - fusion theme
       script:
         - travis_wait docker-compose run test-ci npm run wdio-fusion -- --suite suite1
     -
